fix: tests and migrations
Signed-off-by: Oleh Astappiev <4512729+astappiev@users.noreply.github.com>